Fixed mobile overflow scroll issues

--- a/css/main.css
+++ b/css/main.css
@@ -1169,8 +1169,8 @@ nav {
     .gallery.type-a,
     .gallery.type-b {
       position: relative;
-      overflow: visible;
-      overflow-x: scroll;
+      overflow: visible !important;
+      overflow-x: scroll !important;
       white-space: nowrap;
       padding: 0 290px;
       height: 48vh; }
